manifests/deploy-kibana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deploy
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec: 
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.1.1
          ports:
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc-np
  labels:
    app: kibana
spec:
  type: NodePort
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30601
      name: kibana
  selector:
    app: kibana

---
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
      targetPort: 5601
      name: kibana
  selector:
    app: kibana
