manifests/deploy-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master-deploy
spec:
  selector:
    matchLabels:
      app: redis-master
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-master
    spec:
      containers:
        - name: redis-master
          image: redis
          ports:
            - containerPort: 6379

              #---
              #apiVersion: v1
              #kind: Service
              #metadata:
              #  name: redis-master-svc
              #  labels:
              #    app: redis-master
              #spec:
              #  type: LoadBalancer
              #  ports:
              #    - port: 6379
              #      targetPort: 6379
              #  selector:
              #    app: redis-master

---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis-master
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-master

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave-deploy
spec:
  selector:
    matchLabels:
      app: redis-slave
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
        - name: redis-slave
          image: redis
          command: 
            - "redis-server"
          args:
            - "--slaveof"
            - "$(REDIS_MASTER_HOST)"
            - "6379"
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis-slave
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-slave
