manifests/deploy-websrv.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websrv-deploy
  labels:
    app: websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv
  template:
    metadata:
      labels:
        app: websrv
    spec:
      containers:
        - name: web-server
          image: quay.io/myafk/interactive:stable
          command: [ "interactive", "ingress" ]
          ports:
            - containerPort: 8085

              #---
              #apiVersion: v1
              #kind: Service
              #metadata:
              #  name: websrv-svc
              #  labels:
              #    app: websrv
              #spec:
              #  type: NodePort
              #  ports:
              #    - port: 8085
              #      targetPort: 8085
              #      nodePort: 30085
              #  selector:
              #    app: websrv

---
apiVersion: v1
kind: Service
metadata:
  name: websrv-svc
  labels:
    app: websrv
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: websrv
